--- a/package.json
+++ b/package.json
@@ -3,12 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fontsource/inter": "^5.1.1",
+    "@fontsource/lato": "^5.1.1",
+    "@fontsource/poppins": "^5.1.1",
+    "@fontsource/roboto": "^5.1.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "cra-template": "1.2.0",
+    "firebase": "^11.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "react-scripts": "5.0.1",
     "vcm-app": "file:",
     "web-vitals": "^4.2.4"
@@ -38,6 +44,7 @@
     ]
   },
   "devDependencies": {
+    "react-router-dom": "^7.1.1",
     "tailwindcss": "^3.4.17"
   }
 }
