--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "@testing-library/user-event": "^13.5.0",
     "cra-template": "1.2.0",
     "firebase": "^11.2.0",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.508.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "react-modal": "^3.16.3",
     "react-scripts": "5.0.1",
+    "react-toastify": "^11.0.5",
     "vcm-app": "file:",
     "web-vitals": "^4.2.4"
   },
